# gel

./: .gitignore  CMakeLists.txt  Guia.md  imgui.ini
Editor/: Editor.cpp
Engine/: gel.h
Engine/dep/: Application.h  EntryPoint.h  Renderer.h  Utils.h
Engine/include/: App.h  EntryPoint.h  GLFWContext.h  Input.h  Renderer.h  UI.h  Utils.h  Window.h  World.h
Engine/src/: App.cpp  Application.cpp  Input.cpp  Renderer.cpp  UI.cpp  Window.cpp
Play/: Play.cpp
Sandbox/: SandboxApp.cpp
